--- a/.github/workflows/oco.yml
+++ b/.github/workflows/oco.yml
@@ -4,7 +4,9 @@ on:
   push:
     # this list of branches is often enough,
     # but you may still ignore other public branches
-    branches-ignore: [main master dev development release]
+    # branches-ignore: [main master dev development release]
+    branches:
+    - fun-commits
 
 jobs:
   opencommit:
